# learn-django-htmx

./: README.md  manage.py  pyproject.toml
try_django_htmx/: asgi.py  settings.py  urls.py  wsgi.py
