[tool.poetry]
name = "learn-django-htmx"
version = "0.1.0"
description = ""
authors = ["Iqbal Syifa Mahmuda <bal.mahmuda@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "learn_django_htmx"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
